NetBSD Problem Report #45383

From www@NetBSD.org  Wed Sep 21 12:28:21 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 41EC863B89A
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 21 Sep 2011 12:28:21 +0000 (UTC)
Message-Id: <20110921122820.8DDE063B86B@www.NetBSD.org>
Date: Wed, 21 Sep 2011 12:28:20 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Swapped arguments in meta.c
X-Send-Pr-Version: www-1.0

>Number:         45383
>Category:       bin
>Synopsis:       Swapped arguments in meta.c
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Sep 21 12:30:00 +0000 2011
>Closed-Date:    Wed Sep 21 18:05:47 +0000 2011
>Last-Modified:  Wed Sep 21 18:05:47 +0000 2011
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Swapped arguments in lseek make/meta.c
>How-To-Repeat:

>Fix:
diff -u -r1.23 meta.c
--- usr.bin/make/meta.c	2 Sep 2011 16:26:21 -0000	1.23
+++ usr.bin/make/meta.c	21 Sep 2011 08:41:49 -0000
@@ -159,7 +159,7 @@
 	return;
     }
     /* rewind */
-    lseek(fd, SEEK_SET, 0);
+    lseek(fd, (off_t)0, SEEK_SET);
     if ((fp = fdopen(fd, "r")) == NULL)
 	err(1, "Could not read build monitor file '%d'", fd);

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45383 CVS commit: src/usr.bin/make
Date: Wed, 21 Sep 2011 10:30:48 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Wed Sep 21 14:30:48 UTC 2011

 Modified Files:
 	src/usr.bin/make: meta.c

 Log Message:
 PR/45383: Henning Petersen: Swapped lseek args


 To generate a diff of this commit:
 cvs rdiff -u -r1.23 -r1.24 src/usr.bin/make/meta.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 21 Sep 2011 18:05:47 +0000
State-Changed-Why:
Committed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.