PR/45383: Henning Petersen: Swapped lseek args